@@ -6,7 +6,6 @@ import java.io.IOException;
 import java.time.Duration;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -14,9 +13,13 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.hibernate.Hibernate;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
+
+import com.fasterxml.jackson.core.JsonProcessingException;
 
 import de.tum.cit.aet.artemis.exam.api.ExamApi;
 import de.tum.cit.aet.artemis.exam.api.ExamDateApi;
@@ -34,6 +37,8 @@ import de.tum.cit.aet.artemis.programming.repository.ProgrammingExerciseReposito
 @Lazy
 @Profile(PROFILE_LOCALCI)
 public class AutomaticAfterDueDateService {
+
+    private static final Logger log = LoggerFactory.getLogger(AutomaticAfterDueDateService.class);
 
     private static final int BUILD_AND_TEST_OFFSET_MINUTES = 15;
 
@@ -86,8 +91,7 @@ public class AutomaticAfterDueDateService {
         }
         else if (relevantData.programmingExerciseId() != null) { // has not been overwritten but exercise exists
             final ProgrammingExerciseBuildConfig programmingExerciseBuildConfig = loadedProgrammingExercise.getBuildConfig();
-            final Optional<BuildPlanPhasesDTO> buildPlanPhases = programmingExerciseBuildConfig.getBuildPlanPhases();
-            final List<BuildPhaseDTO> phases = buildPlanPhases.map(BuildPlanPhasesDTO::phases).orElse(null);
+            final List<BuildPhaseDTO> phases = BuildPlanPhasesDTO.fromBuildPlanConfiguration(programmingExerciseBuildConfig.getBuildPlanConfiguration()).phases();
             hasAfterDueDatePhase = hasAfterDueDatePhase(phases);
         }
         else { // check once user saves, after due date phase would be set
@@ -126,7 +130,7 @@ public class AutomaticAfterDueDateService {
      * @param programmingExerciseWithBuildConfig the programming exercise with its build configuration
      * @return the computed date or null if the value would not be set
      */
-    public ZonedDateTime computeBuildAndTestDate(ProgrammingExercise programmingExerciseWithBuildConfig) {
+    public ZonedDateTime computeBuildAndTestDate(ProgrammingExercise programmingExerciseWithBuildConfig) throws JsonProcessingException {
         return computeBuildAndTestDate(programmingExerciseWithBuildConfig, null, null, false);
     }
 
@@ -137,7 +141,7 @@ public class AutomaticAfterDueDateService {
      * @param buildAndTestOffset                 the offset to use for the computation (optional). If provided, the date is always recomputed.
      * @return the computed date or null if the value would not be set
      */
-    public ZonedDateTime computeBuildAndTestDate(final ProgrammingExercise programmingExerciseWithBuildConfig, final Duration buildAndTestOffset) {
+    public ZonedDateTime computeBuildAndTestDate(final ProgrammingExercise programmingExerciseWithBuildConfig, final Duration buildAndTestOffset) throws JsonProcessingException {
         return computeBuildAndTestDate(programmingExerciseWithBuildConfig, buildAndTestOffset, null, false);
     }
 
@@ -176,7 +180,15 @@ public class AutomaticAfterDueDateService {
                 programmingExercise.setBuildConfig(programmingExerciseBuildConfigRepository.findByProgrammingExerciseId(programmingExercise.getId()).orElseThrow());
             }
 
-            final ZonedDateTime computedBuildAndTestDate = computeBuildAndTestDate(programmingExercise, offset, newLatestEndDate, true);
+            final ZonedDateTime computedBuildAndTestDate;
+            try {
+                computedBuildAndTestDate = computeBuildAndTestDate(programmingExercise, offset, newLatestEndDate, true);
+            }
+            catch (JsonProcessingException e) {
+                log.error("Skipping automatic build-and-test date recomputation for programming exercise {} due to invalid build plan configuration in build config {}.",
+                        programmingExercise.getId(), programmingExercise.getBuildConfig().getId(), e);
+                continue;
+            }
             if (!Objects.equals(programmingExercise.getBuildAndTestStudentSubmissionsAfterDueDate(), computedBuildAndTestDate)) {
                 programmingExercise.setBuildAndTestStudentSubmissionsAfterDueDate(computedBuildAndTestDate);
                 updatedExercises.add(programmingExercise);
@@ -184,7 +196,7 @@ public class AutomaticAfterDueDateService {
         }
 
         if (updatedExercises.isEmpty()) {
-            return Collections.emptySet();
+            return Set.of();
         }
 
         return programmingExerciseRepository.saveAll(updatedExercises).stream().map(ProgrammingExercise::getId).collect(Collectors.toSet());
@@ -214,12 +226,13 @@ public class AutomaticAfterDueDateService {
     }
 
     private ZonedDateTime computeBuildAndTestDate(final ProgrammingExercise exerciseWithBuildConfig, final Duration offset, final ZonedDateTime newLatestWithGraceExamEndDate,
-            final boolean forceCompute) {
+            final boolean forceCompute) throws JsonProcessingException {
         final ZonedDateTime dueDate = exerciseWithBuildConfig.isExamExercise() ? newLatestWithGraceExamEndDate == null && examApi.isPresent()
                 ? getLatestExamEndDateWithGrace(examApi.orElseThrow().findByExerciseId(exerciseWithBuildConfig.getId()).orElseThrow())
                 : newLatestWithGraceExamEndDate : exerciseWithBuildConfig.getDueDate();
 
-        final boolean hasAfterDueDatePhase = hasAfterDueDatePhase(exerciseWithBuildConfig.getBuildConfig().getBuildPlanPhases().map(BuildPlanPhasesDTO::phases).orElse(null));
+        final boolean hasAfterDueDatePhase = hasAfterDueDatePhase(
+                BuildPlanPhasesDTO.fromBuildPlanConfiguration(exerciseWithBuildConfig.getBuildConfig().getBuildPlanConfiguration()).phases());
 
         if (!hasAfterDueDatePhase || dueDate == null) {
             return null;
